--- a/playground/src/components/app-home/app-home/app-home.scss
+++ b/playground/src/components/app-home/app-home/app-home.scss
@@ -1,3 +1,7 @@
+:host {
+  width: 100%;
+}
+
 button {
   background: #5851ff;
   color: white;
@@ -8,15 +12,15 @@ button {
   text-transform: uppercase;
   padding: 16px 20px;
   border-radius: 2px;
-  box-shadow: 0 8px 16px rgba(0,0,0,.1), 0 3px 6px rgba(0,0,0,.08);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
   outline: 0;
-  letter-spacing: .04em;
-  transition: all .15s ease;
+  letter-spacing: 0.04em;
+  transition: all 0.15s ease;
   cursor: pointer;
 }
 
 button:hover {
-  box-shadow: 0 3px 6px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.1);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.1);
   transform: translateY(1px);
 }
 
@@ -29,11 +33,11 @@ button:hover {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 80%;
+  width: 50%;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   text-align: center;
 
   h1 {
@@ -43,7 +47,7 @@ button:hover {
   h2 {
     font-size: 1.5rem;
     font-weight: 400;
-    color: #555555
+    color: #555555;
   }
 }
 
@@ -55,7 +59,7 @@ button:hover {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   text-align: center;
   font-size: 3rem;
   font-weight: 600;
@@ -69,7 +73,7 @@ button:hover {
   .spinner > div {
     width: 18px;
     height: 18px;
-    background-color: $c-darkgrey;;
+    background-color: $c-darkgrey;
 
     border-radius: 100%;
     display: inline-block;
@@ -88,18 +92,26 @@ button:hover {
   }
 
   @-webkit-keyframes sk-bouncedelay {
-    0%, 80%, 100% { -webkit-transform: scale(0) }
-    40% { -webkit-transform: scale(1.0) }
-  }
-
-  @keyframes sk-bouncedelay {
-    0%, 80%, 100% {
+    0%,
+    80%,
+    100% {
       -webkit-transform: scale(0);
-      transform: scale(0);
-    } 40% {
-      -webkit-transform: scale(1.0);
-      transform: scale(1.0);
+    }
+    40% {
+      -webkit-transform: scale(1);
     }
   }
 
+  @keyframes sk-bouncedelay {
+    0%,
+    80%,
+    100% {
+      -webkit-transform: scale(0);
+      transform: scale(0);
+    }
+    40% {
+      -webkit-transform: scale(1);
+      transform: scale(1);
+    }
+  }
 }
