[playground] several improvements to state management and UI (#862)
* WIP -- several improvements to state management and UI

* Uncomment some code

* Remove one more comment

* Remove unnecessary comment

* Add a bit back

* Handle error message bettwe on account-register

* some ui touch ups

* Use local method not bound method

* Use red color

* remove commented code

* Remove typo

* remove unused event

* Fix build error

* Avoid using exclamation mark

* Fix tpo

* Use a hack to avoid yarn test errors

* Remove exclaimation

--- a/playground/src/global/app.css
+++ b/playground/src/global/app.css
@@ -17,6 +17,8 @@ html { font-family: 'Inter', sans-serif; }
 html {
   font-size: 15px;
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  color: #252525;
 }
 
 body {
