--- a/playground/src/global/_button.scss
+++ b/playground/src/global/_button.scss
@@ -25,7 +25,7 @@
 
   &:not(:disabled) {
     &:hover {
-      background-color: $c-mediumgrey;
+      background-color: $c-lessdarkgrey;
     }
   }
 
