--- a/playground/src/global/_variables.scss
+++ b/playground/src/global/_variables.scss
@@ -1,12 +1,14 @@
-$c-black: #101010;
+$c-black: #252525;
 $c-blue: #006dff;
 $c-bluealt: #0058e0;
 $c-bluelightened: #78b2ff;
 $c-lightgrey: #f8f8f8;
 $c-mediumgrey: #c6c6c6;
+$c-lessdarkgrey: #888888;
 $c-darkgrey: #707070;
+$c-darkergrey: #292929;
 $c-red: #ff0000;
-$c-darkred: #c00000;
+$c-darkred: #d02020;
 $c-white: #fff;
 
 $f-rem: 15px;
