--- a/playground/src/global/_typography.scss
+++ b/playground/src/global/_typography.scss
@@ -42,3 +42,10 @@
 .f-base {
   @include f-base;
 }
+
+.smallprint {
+  margin: $rhythm * 2 0 $rhythm * 2 0;
+  font-size: 0.78rem;
+  font-weight: 400;
+  color: $c-darkgrey;
+}
