Fix scss bug (#902)

--- a/playground/src/components/account/account-edit/account-edit.scss
+++ b/playground/src/components/account/account-edit/account-edit.scss
@@ -10,3 +10,10 @@
   margin: 0 auto;
   width: 150px;
 }
+
+.smallprint {
+  margin: $rhythm * 2 0 $rhythm * 2 0;
+  font-size: 0.78rem;
+  font-weight: 400;
+  color: $c-darkgrey;
+}
