[playground] Adds widget-dev-flags component to monitor `playground:*` dev flags (#919)
* playground: widget-dialog can take custom CSS classes

* playground: added z-index 1 for modal backdrop

* playground: implemented widget-dev-flags component

* playground: removed unnecessary Watch() import

* playground: removed another unnecessary Watch() import

* playground: removed hardcoded key in buildFlagRow()

* playground: moved boolean cast to `.some()` check

* playground: trying to make the linter happy

--- a/playground/src/components/widgets/widget-dialog/widget-dialog.scss
+++ b/playground/src/components/widgets/widget-dialog/widget-dialog.scss
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: center;
   background: rgba(0, 0, 0, 0.8);
+  z-index: 1;
 }
 
 dialog {
@@ -77,6 +78,31 @@ dialog {
       &:hover {
         background: darken($color: $c-blue, $amount: 10%);
       }
+    }
+  }
+}
+
+.dialog--dev-flags {
+  width: 600px;
+}
+
+.dialog-content--dev-flags {
+  font-size: 14px;
+
+  table {
+    width: 100%;
+
+    th {
+      border-bottom: 1px solid #ccc;
+    }
+
+    th,
+    td {
+      text-align: left;
+    }
+
+    form-button {
+      background: none;
     }
   }
 }
