[playground] Prevents the user from playing any dApps until the state channel has been collateralized (#923)
* playground: added canUseApps flag in AppRegistryState

* playground: implemented hubBalanceWei validation for canUseApps

* playground: unified both spinners and etherscan URL generators

* playground: cleaned up styles

* playground: implemented UI block while canUseApps = false

* playground: fixed copy for waiting message

* playground: added intermediate message while creating multisig

* playground: eval'ing to >0 hub balances to allow apps to be used

* playground: polling balance until canUseApps = true

* playground: added TODO

--- a/playground/src/components/app-home/apps-list/apps-list.scss
+++ b/playground/src/components/app-home/apps-list/apps-list.scss
@@ -1,3 +1,7 @@
+.apps.apps--disabled {
+  filter: blur(5px);
+}
+
 .title {
   @include f-heading;
   margin-bottom: 1.5rem;
@@ -13,7 +17,7 @@
   .title {
     text-align: center;
   }
-  
+
   .list {
     flex-direction: column;
     flex-wrap: nowrap;
