--- a/playground/src/components/widgets/widget-spinner/widget-spinner.scss
+++ b/playground/src/components/widgets/widget-spinner/widget-spinner.scss
@@ -1,4 +1,4 @@
-.spinner {
+.spinner--spinner-circle {
   display: inline-block;
   width: 14px;
   height: 14px;
@@ -7,25 +7,102 @@
   &.spinner--hidden {
     visibility: hidden;
   }
-}
 
-.spinner:after {
-  content: " ";
-  display: block;
-  width: 14px;
-  height: 14px;
-  margin: 1px;
-  border-radius: 50%;
-  border: 2px solid #000;
-  border-color: #000 transparent #000 transparent;
-  animation: spinner 1.2s linear infinite;
-}
-
-@keyframes spinner {
-  0% {
-    transform: rotate(0deg);
+  &.spinner--circle:after {
+    content: " ";
+    display: block;
+    width: 14px;
+    height: 14px;
+    margin: 1px;
+    border-radius: 50%;
+    border: 2px solid #000;
+    border-color: #000 transparent #000 transparent;
+    animation: spinner 1.2s linear infinite;
   }
-  100% {
-    transform: rotate(360deg);
+
+  @keyframes spinner {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
+
+.spinner--loading {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 3rem;
+  font-weight: 600;
+  color: $c-mediumgrey;
+
+  label {
+    font-size: 1rem;
+    font-family: inherit;
+    color: $c-darkgrey;
+  }
+
+  a {
+    display: block;
+    font-size: 0.9rem;
+    font-family: inherit;
+  }
+
+  .spinner-loading {
+    width: 70px;
+    text-align: center;
+  }
+
+  .spinner-loading > div {
+    width: 18px;
+    height: 18px;
+    background-color: $c-darkgrey;
+
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  }
+
+  .spinner-loading .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+  }
+
+  .spinner-loading .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+  }
+
+  @-webkit-keyframes sk-bouncedelay {
+    0%,
+    80%,
+    100% {
+      -webkit-transform: scale(0);
+    }
+    40% {
+      -webkit-transform: scale(1);
+    }
+  }
+
+  @keyframes sk-bouncedelay {
+    0%,
+    80%,
+    100% {
+      -webkit-transform: scale(0);
+      transform: scale(0);
+    }
+    40% {
+      -webkit-transform: scale(1);
+      transform: scale(1);
+    }
   }
 }
