[ttt] Update TTT dapp (#951)
* Update TTT dapp

* Remove useless log

* lint

--- a/dapp-tic-tac-toe/src/index.css
+++ b/dapp-tic-tac-toe/src/index.css
@@ -388,6 +388,10 @@ Game Screen - Board
   padding-top: calc(100% / 3);
 }
 
+.square:disabled {
+  cursor: default;
+}
+
 .square > img {
   /* Styles player marker, when squares are clicked */
   position: absolute;
