Implementation of eth_call methods inside the machine (fixes most bugs on demo too) (#927)
* Attempt at uninstall using resolve method

* checkpoint

* machine

* everything works

* Clean up

* Import from types

* Add frontend check

--- a/playground/src/components/account/account-register/account-register.scss
+++ b/playground/src/components/account/account-register/account-register.scss
@@ -4,3 +4,10 @@
   font-weight: 400;
   color: $c-darkgrey;
 }
+
+.error {
+  color: $c-darkred;
+  font-size: 85%;
+  padding-bottom: $rhythm * 2;
+  margin-top: -$rhythm;
+}
