[playground] Moves "Log out" action to "Account Edit" screen (#970)
* playground: removed logout from HeaderAccount

* playground: added support for custom classes on FormButton

* playground: fixed linting

* playground: added button--secondary

* playground: rewired logout logic in AccountEdit

--- a/playground/src/components/form/form-button/form-button.scss
+++ b/playground/src/components/form/form-button/form-button.scss
@@ -18,4 +18,12 @@
     cursor: default;
     opacity: 0.68;
   }
+
+  &.button--secondary {
+    background-color: $c-darkgrey;
+
+    &:hover {
+      background-color: $c-darkergrey;
+    }
+  }
 }
