[playground] Brings up the UI up to spec in mobile (#973)
* playground: fixed welcome screen columns

* playground: realigned connection widget to logo

* playground: fixed menu layout, round 1

* playground: better UI for menu button

* playground: added icons for login and signup

* playground: added error icon for login failed message

* playground: fixed bad color name

* playground: fixed header account info

* playground: centered widget-screen, added "close" icon

* playground: fixed left margin for menu, added button class for Register

* playground: fixed ETH amount in account-eth-form to 4 digits

* playground: better readibility for collateralization UI

* playground: added support for autofocus

* playground: added autofocus on account-deposit

* playground: better user feedback + UI lock for deposits/withdrawals

* playground: fixed exchange layout for desktop

* playground: suggesting Coinbase for mobile

--- a/playground/src/components/account/account-exchange/account-exchange.scss
+++ b/playground/src/components/account/account-exchange/account-exchange.scss
@@ -1,6 +1,10 @@
 .form-containers {
   display: flex;
   margin-top: $rhythm * 4;
+  flex-wrap: wrap;
+  max-width: 50rem;
+  margin-left: auto;
+  margin-right: auto;
 
   .form-container {
     padding: $rhythm * 2;
@@ -13,6 +17,11 @@
       margin-right: 0;
       margin-left: auto;
     }
+  }
+
+  .container {
+    width: 100%;
+    padding: $rhythm ($rhythm * 2);
   }
 }
 
