--- a/playground/src/components/app-home/app-home/app-home.scss
+++ b/playground/src/components/app-home/app-home/app-home.scss
@@ -76,6 +76,8 @@ button:hover {
 
       .flex-item {
         width: 100%;
+        max-width: none;
+        margin-bottom: 0;
         margin-right: 0;
         border-right: 0;
         margin-left: 0;
