--- a/playground/src/components/layout/layout-header/header-account/header-account.scss
+++ b/playground/src/components/layout/layout-header/header-account/header-account.scss
@@ -8,7 +8,7 @@
     }
 
     .btn-error {
-      background: $c-darkred;;
+      background: $c-darkred;
     }
   }
 }
@@ -22,7 +22,6 @@
   padding: $rhythm;
 }
 
-
 .info-container {
   display: flex;
   align-items: center;
@@ -33,24 +32,39 @@
 }
 
 @media screen and (max-width: $screen-sm) {
+  :host {
+    width: 100%;
+  }
+
   .account-container {
     flex-direction: column;
+    align-items: flex-start;
   }
 
   .info-container {
     flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
 
     > * {
       margin-bottom: $rhythm;
+      width: 100%;
+    }
+
+    > :first-child {
+      margin-right: 0;
     }
   }
 
   .btn-container {
     order: -1;
     flex-direction: column;
+    width: 100%;
+    margin-left: -($rhythm * 0.5);
   }
 
   .btn {
+    width: 100%;
     border: 0;
     padding: 0;
     background: transparent;
@@ -58,5 +72,17 @@
     font-size: 125%;
     margin-bottom: $rhythm;
     text-align: left;
+    box-shadow: none;
+    padding-left: $rhythm * 1.5;
+
+    &:not(:disabled) {
+      &:hover {
+        background: $c-lightgrey;
+      }
+    }
+
+    &:disabled {
+      background: $c-lightgrey;
+    }
   }
 }
