--- a/playground/src/components/widgets/widget-spinner/widget-spinner.scss
+++ b/playground/src/components/widgets/widget-spinner/widget-spinner.scss
@@ -1,4 +1,4 @@
-.spinner--spinner-circle {
+.spinner.spinner--circle {
   display: inline-block;
   width: 14px;
   height: 14px;
@@ -18,6 +18,11 @@
     border: 2px solid #000;
     border-color: #000 transparent #000 transparent;
     animation: spinner 1.2s linear infinite;
+  }
+
+  &.spinner--color-white:after {
+    border: 2px solid #fff;
+    border-color: #fff transparent #fff transparent;
   }
 
   @keyframes spinner {
@@ -45,16 +50,24 @@
   color: $c-mediumgrey;
   z-index: 1;
 
+  &.spinner--color-white {
+    color: #fff;
+  }
+
   label {
     font-size: 1rem;
     font-family: inherit;
     color: $c-darkgrey;
+    display: block;
+    margin-top: 1rem;
+    line-height: 1.5rem;
   }
 
   a {
     display: block;
     font-size: 0.9rem;
     font-family: inherit;
+    margin-top: 1rem;
   }
 
   .spinner-loading {
@@ -104,6 +117,16 @@
     40% {
       -webkit-transform: scale(1);
       transform: scale(1);
+    }
+  }
+}
+
+@media screen and (max-width: $screen-sm) {
+  .spinner--loading {
+    label {
+      max-width: 80%;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
 }
