Integrates Wallet UI with Metamask (#1732)
* typed store, first step in connecting Web3 (we now know the user's ethAddress)

Co-authored-by: Santiago Persico <persi93@gmail.com>

* removed debugging file

* fixed tests

* refactors user store

* added routes, declared global ethereum obj

* added redux dev utils

* records errors on addUser - store

* add devtools integration

* solves devtools integration type error

* working store error saving for addUser

* we're now able to sign messages! :D

* adds code for signature

* improve event handling for forminput

* integrate accountRegistration form

* remove test code for formInput changes

* remove unused import

* added error handling, ordered some imports

* fixed parameters for ethereum.send()

* trying to debug listen:createChannel

* improve error handling and feedback

* refactors store modules and objects

* set more env variables

* allows firebase-client to be available in MetaMask

* added useful logs for debugging in the Node initialization

* registration flow completed! :D

* added some more .env variables

* picking up stored user account from token

Co-authored-by: Santiago Persico <persi93@gmail.com>

* redirects to / if no user is logged in

* add missing icons

* fixes images styles in channels

* attempting to get balances

* unified action types, deposit flow is a wip

Co-authored-by: Santiago Persico <persi93@gmail.com>

* added missing context typing for AccountRegistration

* now storing both Ethereum and CF balances

* fixed typing for FormInput

* deposit flow finished!

* State Channels screen shows Hub0 address

* fix error message in account registration

* added key for multiple elements, fixed styles for SC list

* fix form-button spinner behaviour

* add feedback for loading state (button-spinner)

* move getUser to global app component

* fix unit input for "ETH"

* test implementatino to get

--- a/wallet-ui/src/components/channel/channel-node/ChannelNode.scss
+++ b/wallet-ui/src/components/channel/channel-node/ChannelNode.scss
@@ -5,7 +5,8 @@
 
   .channel-node-wrapper {
     display: flex;
-    padding-bottom: $rhythm * 2;
+    padding-top: $rhythm;
+    padding-bottom: $rhythm;
 
     &:hover {
       background: $c-lightgrey;
@@ -38,24 +39,33 @@
   .channel-icon,
   .channel-control-toggle-placeholder,
   .channel-control-toggle {
-    width: 32px;
-    height: 32px;
+    width: 18px;
+    height: 18px;
+    margin-right: 10px;
   }
 
   .channel-control-menu {
     justify-self: flex-end;
+    height: 28px;
+    width: 15px;
+    &:focus {
+      outline: none;
+    }
   }
 
   .channel-name {
-    font-size: 1.25rem;
+    font-size: 1.1rem;
     font-weight: 400;
     margin-top: 0;
-    margin-bottom: $rhythm;
+    margin-bottom: $rhythm * 0.5;
   }
 
   .channel-address {
     font-size: 0.8rem;
     color: $c-darkgrey;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 360px;
   }
 
   .channel-menu {
@@ -65,9 +75,9 @@
     margin: 0;
     background: $c-white;
     box-shadow: 0px 2px 10px $c-mediumgrey;
-    right: 120px;
+    right: 50px;
     width: auto;
-    min-width: 120px;
+    min-width: 100px;
 
     &.channel-menu--visible {
       position: absolute;
