--- a/wallet-ui/src/components/form/form-button/FormButton.scss
+++ b/wallet-ui/src/components/form/form-button/FormButton.scss
@@ -8,7 +8,7 @@
   background-color: $c-blue;
   border-radius: 2px;
   color: $c-white;
-  padding: $rhythm $rhythm * 6;
+  padding: $rhythm $rhythm;
   display: block;
   margin-left: auto;
   margin-right: auto;
