[Wallet-UI] Add balance screen & Withdraw component & small fix (#1997)
* add structure for balance screen

* add mocked Account Withdraw and balance page

* fix wrong redirection onboarding flow

* fixes and removes tests

* remove account balance test

* fix withdraw store Transition states

* add withdraw CF functions calls

* remove warnings non-used-vars wallet-ui

* fix warning wallet balance

* fix typos and small mistakes

--- a/wallet-ui/src/components/widget/widget-screen/WidgetScreen.scss
+++ b/wallet-ui/src/components/widget/widget-screen/WidgetScreen.scss
@@ -12,7 +12,14 @@
   overflow: auto;
   width: 100%;
   height: 100%;
+  &.half {
+    position: static;
+    height: auto;
 
+    .logo {
+      display: none;
+    }
+  }
   .button {
     width: 100%;
   }
